--- a/style/custom.css
+++ b/style/custom.css
@@ -1,7 +1,10 @@
 <link href='http://fonts.googleapis.com/css?family=Fenix' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Alegreya+Sans:100,300,400,500,700,800,900,100italic,300italic,400italic,500italic,700italic,800italic,900italic' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Source+Code+Pro:300,400' rel='stylesheet' type='text/css'>
-<link href="https://fonts.googleapis.com/css?family=Oswald|Raleway" rel="stylesheet" type='text/css'> 
+<link href="https://fonts.googleapis.com/css?family=Oswald|Raleway" rel="stylesheet" type='text/css'>
+<link href="https://fonts.googleapis.com/css2?family=Chivo+Mono:ital,wght@0,100..900;1,100..900&family=Fira+Mono:wght@400;500;700&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Markazi+Text:wght@400..700&family=Outfit:wght@100..900&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Markazi+Text:wght@400..700&family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&display=swap" rel="stylesheet">
+
 <style>
 .prompt{
     display: none !important;
@@ -29,8 +32,9 @@ div.cell{
         /*margin-right:auto;*/
     }
     h1, h2, h3, h4, h5 {
-        font-family: 'Oswald', sans-serif; !important;
-        font-style: oblique !important;
+        font-family: 'Merriweather' !important;
+        font-weight: semi-bold !important;
+        font-style: italic !important;
     }
     div.text_cell_render{
         font-family: 'Raleway', sans-serif; !important;
